--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/internship?useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root
+
 server.port=8090
+security.basic.enabled=false
 
 flyway.baselineOnMigrate=true
 flyway.locations=db/migration
